fix: body transition color and intro button wrap

--- a/app/styles/tailwind.css
+++ b/app/styles/tailwind.css
@@ -65,7 +65,7 @@
     @apply border-border;
   }
   body {
-    @apply cursor-default bg-background text-foreground;
+    @apply cursor-default bg-background text-foreground transition-all;
     @apply selection:bg-primary/75 selection:text-white;
   }
   img {
